[package]

name = "pistoncore-glutin_window"
version = "0.67.2"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["glutin", "window", "piston"]
description = "A Piston window back-end using the Glutin library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/glutin_window.git"
homepage = "https://github.com/pistondevelopers/glutin_window"

[lib]
name = "glutin_window"
path = "src/lib.rs"

[dependencies]
gl = "0.13.0"
glutin = "0.26.0"
pistoncore-input = "1.0.0"
pistoncore-window = "0.47.0"
shader_version = "0.7.0"
