[package]

name = "pistoncore-glutin_window"
version = "0.73.1"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["glutin", "window", "piston"]
description = "A Piston window back-end using the Glutin library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/glutin_window.git"
homepage = "https://github.com/pistondevelopers/glutin_window"

[lib]
name = "glutin_window"
path = "src/lib.rs"

[dependencies]
gl = "0.14.0"
glutin = "0.32.3"
winit = "0.30.0"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
pistoncore-input = "1.0.0"
pistoncore-window = "1.0.0"
shader_version = "0.7.0"
rustc-hash = "2.1.1"

[dev-dependencies]
piston = "1.0.0"
